TBD - 0.13.0
- [NEW] - QSY Contact Wiping (issue #100)
- [NEW] - Timeoff is highlighted when QSO timer is running (issue #100)
- [NEW] - Callsign whisperer
- [NEW] - Bandmap - Spot's color is recalculated when QSO is saved
- [NEW] - BandMap - CTRL + Wheel zooming
- [NEW] - BandMap - Zooming via buttons keeps a focus on centre freq 
- Fixed MacOS builds (PR #102) (thx gerbert)
- Fixed templates under MacOS (PR #101) (thx gerbert)

2022/07/15 - 0.12.0
- [NEW] Statistics - Show ODX on the map
- [EXPERIMENTAL] Support for QT Styles (issue #88)
- [CHANGED] - Removed F2 as a shortcut for QSO field editing
- Next fixing of a high CPU load when DXC is processed (issue #52)
- Fixed QSO fields from prev QSOs when Prefix - Callsign - Suffix (issue #90)
- Fixed Chaotic QSO start time (issue #93)
- Offline maps - Lighter colors, night sky removed, Sun position removed (issue #97)
- Fixed incorrect A-Index colort (issue #98)
- Fixed Stats Widget - percents - does not reflect date range (issue #99)
- Fixed potential LogParam Cache issue
- Import/Export polishing

2022/06/26 - 0.11.0
- [NEW] QSO Detail/Edit Dialog
- [NEW] Added mW power Support
- [NEW] Implemented ADIF 3.1.3
- [NEW] Rigwidget saves last used freq for bands
- Fixed Rig Combo size when Rig Profile name is long (issue #31)
- Fixed CQZ, ITUZ do not validate whether their entered value is a number (issue #75)
- Fixed vucc, myvucc must be uppercase - Edit mode (issue #76)
- Fixed Greyline-Map is very dark (issue #78)
- Fixed DX Country is not saved properly when name is between S-Z (issue #79)
- Fixed Bandmap call selection - only left mouse button (issue #82)
- Fixed My Notes Copy & Paste - Rich Text (issue #83)
- Fixed Font appearance in the context menu (issue #84)

2022/06/05 - 0.10.0
- [NEW] Bandmap shows XIT/RIT Freq 
- [NEW] Bandmap RX Mark Center (issue #69)
- [NEW] Getting PTT State from RIG - only for CAT-controlled rigs
- [NEW] PTT Shortchut - only for CAT-controlled rigs